Add mongoose schemes, implement services and update swagger documentation
