# api/src/routes/folders.routes.ts
@@ -5,22 +5,37 @@ const router = express.Router();
 
 router.post(
   '/folders',
-  // #swagger.tags = ['Folders']
-  // #swagger.description = ['Create folder']
+  /*
+    #swagger.tags = ['Folders']
+    #swagger.description = 'Create folder'
+    #swagger.security = [{
+      "bearerAuth": []
+    }]
+  */
   foldersController.createFolder
 );
 
 router.delete(
   '/folders/{folderId}',
-  // #swagger.tags = ['Folders']
-  // #swagger.description = ['Delete folder']
+  /*
+    #swagger.tags = ['Folders']
+    #swagger.description = 'Delete folder'
+    #swagger.security = [{
+      "bearerAuth": []
+    }]
+  */
   foldersController.deleteFolder
 );
 
 router.get(
   '/folders/{folderId}',
-  // #swagger.tags = ['Folders']
-  // #swagger.description = ['Get folder content']
+  /*
+    #swagger.tags = ['Folders']
+    #swagger.description = 'Get folder content'
+    #swagger.security = [{
+      "bearerAuth": []
+    }]
+  */
   foldersController.getFolderContent
 );
 
